site_projeto_nginx/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 30
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
#        imagePullPolicy: Never
#        image: nginx
        image: nginx_of_bill
        ports:
        - containerPort: 80
