site_projeto_nginx/services-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    type: frontend
  ports:
    - name: frontend
      port: 80
      targetPort: 80
  type: LoadBlancer
